# Spectacle

./: ideas.md  project_standards.md  pyproject.toml
media/: file.ppm
src/Spectacle/: ImageFormatFactory.py  __init__.py  image.py  imageformat.py  jpg.py  main.py  png.py  ppm.py  ppm_file.py
tests/: png_test.py  ppm_test.py
